--- a/_posts/2017-11-10-UI-kit.md
+++ b/_posts/2017-11-10-UI-kit.md
@@ -7,7 +7,7 @@ categories: projects
 
 The assignment was to build a UI kit for financial app with the optional goal of building it for teenages. 
 
-##Research
+## Research
 
 The first thing I did was find a detailed meaning on "what is an UI kit?" It's a matter of opening google images and see what shows up when you search "Ui kit": 
 
@@ -24,45 +24,44 @@ The next noticeable thing is flat design. With a banking app you can chose to be
 But to keep the app a bit more on the youthful and unique side, the white background both apps have, shall be replaced with a dark one (nearing black).
 As for the elements used in banking apps, they seem to not need many. No fancy charts have been found or calendars for example.
 
-##Conclusion
+## Conclusion
 
 **Elements**
 
 The next list of elements seem of importance: 
-*	Buttons
--	Pressed
--	Not pressed
--	Locked
-*	Text
--	Bigger headers
--	Smaller headers
--	Different colored headers (colors stay within the chosen color range)
--	Normal text
--	Small text
--	Bold text
-*	Login
-*	Profile picture
-*	Tabs
-*	Switch
-*	Radio buttons
-*	Textbox
-*	Drawer menu
-*	Several icons (money, arrows, sandwich for drawer menu, etc.)
-*	Lines
-*	Bars
++ Buttons
+  -	Not pressed
+  - Locked
++ Text
+  - Bigger headers
+  - Smaller headers
+  - Different colored headers (colors stay within the chosen color range)
+  - Normal text
+  - Small text
+  - Bold text
++ Login
++ Profile picture
++ Tabs
++ Switch
++ Radio buttons
++ Textbox
++ Drawer menu
++ Several icons (money, arrows, sandwich for drawer menu, etc.)
++ Lines
++ Bars
 
 **Colors**
 
--	Green
--	Yellow
--	Grey/Black
--	White
++ Green
++ Yellow
++ Grey/Black
++ White
 
 **Design tool**
 
 For this assignment Illustrator will be used, because this is the tool usually made for (example) icon building. From a professional point of view, may the UI kit ever be used, making the UI kit vector based makes sure it never loses it graphical quality. This makes sure the potential user of the UI kit can easily reuse elements in different sizes. If it were important the UI kit had detailed pictures, where pixel work is more important, then Photoshop could have been the better option. 
 
-##Execution
+## Execution
 
 The next image shows my work environment. When I work with adobe photoshop or illustrator I work a lot with guides, rulers, several layers (nicely named and grouped for a better overview). 
 
@@ -70,13 +69,13 @@ However this is the first time I truly use Illustrator for something a bit more 
 
 ![screenshot]({{site.url}}\assets\uikit\screenshots\screenshot_workspace.png)
 
-##Result 
+## Result 
 
 ![screenshot]({{site.url}}\assets\uikit\UIkit_FinancialAppV2.jpg)
 
 [Download original illustrator file here]({{site.url}}\assets\uikit\UIkit_FinancialApp.ai)
 
-##Resources
+## Resources
 
 * Google Images
 * App Icons: [https://www.gentleface.com/free_icon_set.html](https://www.gentleface.com/free_icon_set.html)
