--- a/_posts/2017-11-10-3D-model.md
+++ b/_posts/2017-11-10-3D-model.md
@@ -134,8 +134,34 @@ In order to build this 3D model, I’ve chosen to work with Blender, because it 
 
 ## Execution
 
-COMING SOON!!
+So, I know I said I'm familiar with Blender, but I have not yet done a project complicated like a helmet with hornes and what not! So when I started I restarted a few times because I screwed up (by using Blender wrong and any fix made it worse). In the end, I slowly learned thanks to the help of YouTube tutorials how to use the odd hotkeys, how to cute parts, add parts, etc. 
+
+![screenshot]({{site.url}}\assets\3dmodel\screenshots\screenshot_base.png)
+
+![screenshot]({{site.url}}\assets\3dmodel\screenshots\screenshot_halfway.jpg)
+
+![screenshot]({{site.url}}\assets\3dmodel\screenshots\screenshot_nearly_done.jpg)
+
+You know, I learned that my perfectionism is not very good for such projects. I will want it to be all neat and in the end not being able to find a solution on how to do that! So for now, I'll leave the smoothness be, and try out matherials.
+
+A color is pretty easy to add. If there is time left I will try more with textures. 
 
 ## Result
 
-COMING SOON!!
+I found a way to display 3d models: 
+
+Source: [script to display object files in website](https://manu.ninja/webgl-3d-model-viewer-using-three-js/)
+
+However I do not have enough javascript knowledge to make it work (for now). 
+
+So for now, i'm displaying in images. 
+
+![screenshot]({{site.url}}\assets\3dmodel\result_white.jpg)
+
+I left this version white, so you can see the details which have been modeled better. I had quite a bit of trouble with getting the scales to my satisfaction, so I asked one of my friends from the Netherlands to help me out there. 
+
+So, I played around with texture, but never got the correct colors on the right places. It seems I still have a lot to learn there. The plan was to make the front scales silver, hornes either black or dirty ivory, the remainder the same dark red as my chest piece displays and some silver lining at the bottom of the scales on the back and if it looks like also around the eyes and cheeks parts. 
+
+![screenshot]({{site.url}}\assets\3dmodel\result_texture.jpg)
+
+<br>
