--- a/_posts/2017-11-10-3D-model.md
+++ b/_posts/2017-11-10-3D-model.md
@@ -156,12 +156,12 @@ However I do not have enough javascript knowledge to make it work (for now).
 
 So for now, i'm displaying in images. 
 
-![screenshot]({{site.url}}\assets\3dmodel\result_white.jpg)
+![screenshot]({{site.url}}\assets\3dmodel\result_white.JPG)
 
 I left this version white, so you can see the details which have been modeled better. I had quite a bit of trouble with getting the scales to my satisfaction, so I asked one of my friends from the Netherlands to help me out there. 
 
 So, I played around with texture, but never got the correct colors on the right places. It seems I still have a lot to learn there. The plan was to make the front scales silver, hornes either black or dirty ivory, the remainder the same dark red as my chest piece displays and some silver lining at the bottom of the scales on the back and if it looks like also around the eyes and cheeks parts. 
 
-![screenshot]({{site.url}}\assets\3dmodel\result_texture.jpg)
+![screenshot]({{site.url}}\assets\3dmodel\result_texture.JPG)
 
 <br>
