--- a/_posts/2017-11-10-3D-model.md
+++ b/_posts/2017-11-10-3D-model.md
@@ -102,7 +102,7 @@ The skirt part is based off the Ebonheart armor. Some details were removed becau
 
 The pictures below show the completely developed chest plate. Most of the original Ebonheart design was kept. 
 
-![screenshot]({{site.url}}\assets\3dmodel\costume_design\chestarmor.jpg)
+![screenshot]({{site.url}}\assets\3dmodel\costume_design\chestarmor.JPG)
 
 #### Arm bracers / gloves
 
