--- a/_posts/2017-11-10-UI-kit.md
+++ b/_posts/2017-11-10-UI-kit.md
@@ -11,11 +11,11 @@ The assignment was to build a UI kit for financial app with the optional goal of
 
 The first thing I did was find a detailed meaning on "what is an UI kit?" It's a matter of opening google images and see what shows up when you search "Ui kit": 
 
-![screenshot]({{site.url}}\assets\uikit\screenshots\kit_examples.jpg)
+![screenshot]({{site.url}}\assets\uikit\screenshots\kit_examples.JPG)
 
 From the looks of the various UI kit found on Google Images they are grouped and almost shaped to already fit a smartphone screen. It seems some have also examples of assembled screens to show the developer how this kit could possibly look. It is possible to put a lot of UI elements in my kit, however since this is for a financial app, it has been decided to only due those of importance. 
 
-![screenshot]({{site.url}}\assets\uikit\screenshots\app_examples.jpg)
+![screenshot]({{site.url}}\assets\uikit\screenshots\app_examples.JPG)
 
 **Noticeable**
 
@@ -71,7 +71,7 @@ However this is the first time I truly use Illustrator for something a bit more 
 
 ## Result 
 
-![screenshot]({{site.url}}\assets\uikit\UIkit_FinancialAppV2.jpg)
+![screenshot]({{site.url}}\assets\uikit\UIkit_FinancialAppV2.JPG)
 
 [Download original illustrator file here]({{site.url}}\assets\uikit\UIkit_FinancialApp.ai)
 
