--- a/_posts/2017-11-10-UI-kit.md
+++ b/_posts/2017-11-10-UI-kit.md
@@ -71,7 +71,7 @@ However this is the first time I truly use Illustrator for something a bit more 
 
 ## Result 
 
-![screenshot]({{site.url}}\assets\uikit\UIkit_FinancialAppV2.JPG)
+![screenshot]({{site.url}}\assets\uikit\UIkit_FinancialAppV2.jpg)
 
 [Download original illustrator file here]({{site.url}}\assets\uikit\UIkit_FinancialApp.ai)
 
